# morning-brief

./: .gitignore  README.md  config.yaml  portfolio.csv.example  pyproject.toml
morning_brief/: calendar_stage.py  cli.py  config.py  digest.py  emailer.py  filter_stage.py  llm.py  market.py  news.py  state.py  summarize.py  telegram.py
scripts/: register-openclaw-cron.sh
