[project]
name = "morning-brief"
version = "0.1.0"
description = "Automated daily portfolio research digest: local LLM council filters news, API-free market data, macOS Calendar + Mail delivery"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pandas-market-calendars>=4.4.0",
    "lxml>=6.1.1",
]

[project.scripts]
morning-brief = "morning_brief.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morning_brief"]
